--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ A pokemon web app which i created using html,css and js and i have taken the hel
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeSearch</title>
 
-<link rel="stylesheet" href="poke.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -49,6 +49,6 @@ A pokemon web app which i created using html,css and js and i have taken the hel
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<script src="poke.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
